# resumes

./: .gitignore  Cargo.toml  Makefile  README.md  biome.json  bun.lockb  config.schema.json  main.tex  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  render.ts  resume.anonymous.json  resume.anonymous.ts  resume.json  resume.schema.json  resume.toml  resume.ts  resume.typ  resumeBuilder.ts  resumeRenderer.ts  reze.toml  template.typ  types.ts
.github/workflows/: main.yml  static.yml
deprecated/: 20201002_pre-polo-resume.docx  20220504_post-grad-resume.docx  20220620_post_grad_resume.tex
resume/: basics.ts  education.ts  index.ts  projects.ts  skills.ts  work.ts
rust/: Cargo.toml  template.typ
rust/src/: main.rs  render.rs  resume.rs  typst.rs
schemas/: config.schema.json  resume.schema.json
src/: command.rs  config.rs  lib.rs  main.rs  prelude.rs  render.rs  resume.rs  typst.rs  view.rs  watcher.rs  world.rs
src/command/: args.rs  render.rs  schema.rs  watch.rs
src/config/: config.rs  reload.rs  resolution.rs  typst.rs
src/resume/: file.rs  query.rs  schema.rs
src/utils/: path.rs
versions/primary/: reze.toml
versions/test/: reze.toml
