[package]
name = "resumes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bon = "3.6"
camino = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.29"
dirs = "6.0.0"
json-resume = { git = "https://github.com/jsonresume/rust-json-resume.git", version = "0.1.0" }
notify = "8.2"
regex = "1.11"
repo_path = "1.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.1"
toml = { version = "0.9", features = ["serde"] }
