[package]
name = "reze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bon = "3.6"
camino = { version = "1.2.1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.29"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
indexmap = { version = "2.12.1", features = ["serde"] }
json-resume = "0.2.0"
merge = { version = "0.2.0", features = ["derive"] }
notify = "8.2"
regex = "1.11"
repo_path = "1.2.3"
schemars = { version = "1.1.0", features = [
    "chrono04",
    "indexmap2",
    "preserve_order",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
shellexpand = "3.1.1"
toml = { version = "0.9", features = ["preserve_order", "serde"] }
toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
