[package]
name = "resumes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bon = "3.6"
camino = "1.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
json-resume = { git = "https://github.com/jsonresume/rust-json-resume.git", version = "0.1.0" }
regex = "1.11"
repo_path_lib = "1.2"
serde_json = "1.0"
